--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
 * {
   margin: 0px;
-  font-family: 'Raleway';
+  font-family: "Raleway";
 }
 
 .banner {
-  background: url(./assets/imagens/banner.png);
-  background-position: 100%;
-  background-size: 100%;
-  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 10px 0;
+  text-align: center;
+  background: url(./assets/imagens/banner.png)  ;
+  background-position: 30% 20%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 
 .banner-content {
@@ -20,6 +27,44 @@
   height: 214px;
   left: 131px;
   top: 27px;
+  -webkit-box-shadow: 0px 0px 1em rgb(0, 0, 0);
+  background: 
+    -moz-radial-gradient()
+  (
+    180deg,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(49, 168, 221, 0) 100%
+  );
 }
 
+.banner-content h1 {
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-weight: 900;
+  line-height: 47px;
+  background: linear-gradient(180deg, #33a8db 0%, #1472b7 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  margin: 16px 0px ;
+}
 
+.banner-content p {
+  height: 46px;
+  width: 510px;
+  font-size: 1.15rem;
+  line-height: 23px;
+  text-align: center;
+}
+
+.banner button {
+  color: #31A8DD;
+  border: #31A8DD solid 1px;
+  width: 330px;
+  padding: 10px;
+  font-size: 20px;
+  text-transform: uppercase;
+  margin-top: 16px;
+  font-weight: 800;
+}
