hover e parallax image css

--- a/styles.css
+++ b/styles.css
@@ -68,17 +68,24 @@ body {
   color: #31A8DD;
   border: #31A8DD solid 1px;
   width: 330px;
-  padding: 10px;
+  padding: 17px;
   font-size: 1rem;
   text-transform: uppercase;
-  margin-top: 16px;
+  margin-top: 25px;
   font-weight: 800;
   background: transparent;
 }
 
+button:hover {
+  background-color: #1472b7;
+  color: white;
+  cursor: pointer;
+}
+
 #course-content {
   display: flex;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
 }
 
@@ -95,9 +102,13 @@ body {
 
 #course-content p,
 #professional-challenges p {
+  display: flex;
+  justify-content: center;
+  width: 792px;
   font-weight: 400;
   font-size: 1rem;
   line-height: 19px;
+  margin: 32px;
   text-align: center;
   color: #FFFFFF;
 }
@@ -114,6 +125,7 @@ body {
 
 .modules-list span {
   color: #31A8DD;
+  padding-right: 5px;
 }
 
 .module {
@@ -126,4 +138,79 @@ body {
   border-radius: 57px ;
   border: rgba(51, 168, 219, 1) 1px solid;
   text-align: center;
+  color: white;
+}
+
+.module:hover {
+  background-color: #000000;
+  cursor: pointer;
+}
+
+#transform-world {
+  display: flex;
+  background-position: right center;
+  background: url(./assets/imagens/woman-code.png);
+  background-size: cover;
+  border: solid 1px #33A8DB;
+  background-attachment: fixed;
+  height: 350px;
+  margin-top: 150px;
+}
+
+#transform-world p {
+  display: flex;
+  width: 244px;
+  font-size: 2.125rem;
+  padding: 5px;
+  background-color: rgb(0, 0, 0), 0.514;
+  text-shadow: 3px 2px 0px #33A8DB;
+  font-weight: 900;
+  color:  #FFFFFF;
+  align-items: center;
+  margin-left: 198px;
+}
+
+#professional-challenges {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#professional-challenges h2 {
+  text-align: center;
+  width: 746px;
+  height: 76px;
+  margin: 80px 0px 80px;
+  font-size: 3rem;
+  font-weight: 700;
+  color: #33A8DB;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin-top: 100px;
+  height: 10px;
+  height: 170px;
+  background: linear-gradient(180deg, rgba(51, 168, 219, 0) 0%, rgba(51, 168, 219, 0.2) 99.99%, rgba(51, 168, 219, 0.2) 100%);
+  border-top: 1px solid #33A8DB;
+}
+
+footer img {
+  padding: 20px 0px;
+}
+
+footer p {
+  color: white;
+}
+
+footer p a {
+  text-decoration: none;
+  color: #31A8DD;
+  font-weight: 900;
 }
