indentação do código

--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,9 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 0px 0px 50px;
+  height: 600px;
   text-align: center;
-  background: url(./assets/imagens/banner.png)  ;
+  background: url(./assets/imagens/banner.png);
   background-position: 30% 20%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -24,7 +24,11 @@ body {
 .banner-content {
   padding-top: 83px;
   text-align: center;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.6) 0%, rgba(49, 168, 221, 0) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.6) 0%,
+    rgba(49, 168, 221, 0) 100%
+  );
 }
 
 .logo img {
@@ -33,13 +37,8 @@ body {
   left: 131px;
   top: 27px;
   -webkit-box-shadow: 0px 0px 1em rgb(0, 0, 0);
-  background: 
-    -moz-radial-gradient()
-  (
-    180deg,
-    rgba(0, 0, 0, 0.6) 0%,
-    rgba(49, 168, 221, 0) 100%
-  );
+  background: -moz-radial-gradient()
+    (180deg, rgba(0, 0, 0, 0.6) 0%, rgba(49, 168, 221, 0) 100%);
 }
 
 .banner-content h1 {
@@ -52,7 +51,7 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-  margin: 16px 0px ;
+  margin: 16px 0px;
 }
 
 .banner-content p {
@@ -65,8 +64,8 @@ body {
 }
 
 .banner button {
-  color: #31A8DD;
-  border: #31A8DD solid 1px;
+  color: #31a8dd;
+  border: #31a8dd solid 1px;
   width: 330px;
   padding: 17px;
   font-size: 1rem;
@@ -95,8 +94,8 @@ button:hover {
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 0.19em;
-  color: #33A8DB;
-  margin-top: 118px ;
+  color: #33a8db;
+  margin-top: 118px;
   margin-bottom: 24px;
 }
 
@@ -110,7 +109,7 @@ button:hover {
   line-height: 19px;
   margin: 32px;
   text-align: center;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .modules-list {
@@ -124,7 +123,7 @@ button:hover {
 }
 
 .modules-list span {
-  color: #31A8DD;
+  color: #31a8dd;
   padding-right: 5px;
 }
 
@@ -135,7 +134,7 @@ button:hover {
   background: #252525;
   width: 535px;
   height: 51px;
-  border-radius: 57px ;
+  border-radius: 57px;
   border: rgba(51, 168, 219, 1) 1px solid;
   text-align: center;
   color: white;
@@ -151,7 +150,7 @@ button:hover {
   background-position: right center;
   background: url(./assets/imagens/woman-code.png);
   background-size: cover;
-  border: solid 1px #33A8DB;
+  border: solid 1px #33a8db;
   background-attachment: fixed;
   height: 350px;
   margin-top: 150px;
@@ -163,9 +162,9 @@ button:hover {
   font-size: 2.125rem;
   padding: 5px;
   background-color: rgb(0, 0, 0), 0.514;
-  text-shadow: 3px 2px 0px #33A8DB;
+  text-shadow: 3px 2px 0px #33a8db;
   font-weight: 900;
-  color:  #FFFFFF;
+  color: #ffffff;
   align-items: center;
   margin-left: 198px;
 }
@@ -184,7 +183,7 @@ button:hover {
   margin: 80px 0px 80px;
   font-size: 3rem;
   font-weight: 700;
-  color: #33A8DB;
+  color: #33a8db;
 }
 
 footer {
@@ -197,8 +196,13 @@ footer {
   margin-top: 100px;
   height: 10px;
   height: 170px;
-  background: linear-gradient(180deg, rgba(51, 168, 219, 0) 0%, rgba(51, 168, 219, 0.2) 99.99%, rgba(51, 168, 219, 0.2) 100%);
-  border-top: 1px solid #33A8DB;
+  background: linear-gradient(
+    180deg,
+    rgba(51, 168, 219, 0) 0%,
+    rgba(51, 168, 219, 0.2) 99.99%,
+    rgba(51, 168, 219, 0.2) 100%
+  );
+  border-top: 1px solid #33a8db;
 }
 
 footer img {
@@ -211,6 +215,6 @@ footer p {
 
 footer p a {
   text-decoration: none;
-  color: #31A8DD;
+  color: #31a8dd;
   font-weight: 900;
 }
