--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,13 @@ body {
   width: 100%;
   height: 600px;
   text-align: center;
-  background: url(./assets/imagens/banner.png);
+  background-image: url(./assets/imagens/banner.png);
   background-position: 30% 20%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+  border: #33a8db 1px solid;
 }
 
 .banner-content {
