--- a/assets/css/style.css/styles.css
+++ b/assets/css/style.css/styles.css
@@ -19,7 +19,7 @@ body {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  border: #33a8db 1px solid;
+  box-shadow: inset #33a8db 2px 2px 6px 2px;
 }
 
 .banner-content {
