--- a/assets/css/style.css/styles.css
+++ b/assets/css/style.css/styles.css
@@ -7,24 +7,31 @@ body {
   background-color: black;
 }
 
+/*
+  - Header
+*/
+
 .banner {
   display: flex;
-  justify-content: center;
+  position: relative;
   width: 100%;
-  height: 600px;
+  justify-content: center;
+  height: 37.5rem;
   text-align: center;
-  background-image: url(./assets/imagens/banner.png);
+  background-image: url(/assets/imagens/banner.png);
   background-position: 30% 20%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
-  box-shadow: inset #33a8db 2px 2px 6px 2px;
 }
 
 .banner-content {
-  padding-top: 83px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  align-items: center;
+  padding-top: 5.188rem;
   background: linear-gradient(
     180deg,
     rgba(0, 0, 0, 0.6) 0%,
@@ -33,10 +40,8 @@ body {
 }
 
 .logo img {
-  width: 248px;
-  height: 214px;
-  left: 131px;
-  top: 27px;
+  width: 15rem;
+  top: 1.688rem;
   -webkit-box-shadow: 0px 0px 1em rgb(0, 0, 0);
   background: -moz-radial-gradient()
     (180deg, rgba(0, 0, 0, 0.6) 0%, rgba(49, 168, 221, 0) 100%);
@@ -46,32 +51,30 @@ body {
   text-transform: uppercase;
   font-size: 2.5rem;
   font-weight: 900;
-  line-height: 47px;
+  line-height: 2.938rem;
   background: linear-gradient(180deg, #33a8db 0%, #1472b7 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-  margin: 16px 0px;
+  margin: 1rem 0rem;
 }
 
 .banner-content p {
-  height: 46px;
-  width: 510px;
-  font-size: 1.15rem;
-  line-height: 23px;
-  text-align: center;
+  display: flex;
+
   color: white;
+  margin-bottom: 1.875rem;
 }
 
 .banner button {
+  justify-content: center;
+  width: 20.625rem;
+  padding: 1.063rem;
   color: #31a8dd;
-  border: #31a8dd solid 1px;
-  width: 330px;
-  padding: 17px;
+  border: #31a8dd solid 0.063rem;
   font-size: 1rem;
   text-transform: uppercase;
-  margin-top: 25px;
   font-weight: 800;
   background: transparent;
 }
@@ -81,6 +84,10 @@ button:hover {
   color: white;
   cursor: pointer;
 }
+
+/*
+  - MAIN
+*/
 
 #course-content {
   display: flex;
@@ -96,47 +103,66 @@ button:hover {
   font-weight: 700;
   letter-spacing: 0.19em;
   color: #33a8db;
-  margin-top: 118px;
-  margin-bottom: 24px;
+  margin-top: 7.375rem;
+  margin-bottom: 1.5rem;
 }
 
 #course-content p,
 #professional-challenges p {
   display: flex;
   justify-content: center;
-  width: 792px;
+
   font-weight: 400;
   font-size: 1rem;
-  line-height: 19px;
-  margin: 32px;
+  line-height: 1.188rem;
+  margin: 2rem;
   text-align: center;
   color: #ffffff;
 }
 
+@media only screen and (max-width: 600px) {
+  .modules-list {
+    background-color: #1472b7;
+    display: flex;
+    min-width: 100%;
+  }
+}
+
 .modules-list {
   display: flex;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  padding: 16px 127px;
-  gap: 10px;
+  padding: 1rem 0rem;
+  gap: 0.625rem;
 }
 
 .modules-list span {
   color: #31a8dd;
-  padding-right: 5px;
+  padding-right: 0.313rem;
+  padding-left: 1rem;
+}
+
+@media only screen and (min-width: 600px) {
+  .module {
+    background-color: #1472b7;
+    display: flex;
+    max-width: 50%;
+  }
 }
 
 .module {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   background: #252525;
-  width: 535px;
-  height: 51px;
-  border-radius: 57px;
-  border: rgba(51, 168, 219, 1) 1px solid;
+  width: 100%;
+  height: 3.188rem;
+  border-radius: 3.563rem;
+  border: rgba(51, 168, 219, 1) 0.063rem solid;
   text-align: center;
   color: white;
 }
@@ -151,23 +177,22 @@ button:hover {
   background-position: right center;
   background: url(/assets/imagens/woman-code.png);
   background-size: cover;
-  border: solid 1px #33a8db;
+  border: solid 0.063rem #33a8db;
   background-attachment: fixed;
-  height: 350px;
-  margin-top: 150px;
+  height: 21.875rem;
+  margin-top: 9.375rem;
 }
 
 #transform-world p {
   display: flex;
-  width: 244px;
+  width: 20rem;
   font-size: 2.125rem;
-  padding: 5px;
+  padding-left: 1rem;
   background-color: rgb(0, 0, 0), 0.514;
-  text-shadow: 3px 2px 0px #33a8db;
+  text-shadow: 0.188rem 0.125rem 0rem #33a8db;
   font-weight: 900;
   color: #ffffff;
   align-items: center;
-  margin-left: 198px;
 }
 
 #professional-challenges {
@@ -177,15 +202,22 @@ button:hover {
   flex-direction: column;
 }
 
+#professional-challenges img {
+  width: 70%;
+  margin: 5rem 0rem;
+}
+
 #professional-challenges h2 {
   text-align: center;
-  width: 746px;
-  height: 76px;
-  margin: 80px 0px 80px;
+  width: 100%;
+  height: 4.75rem;
+  margin: 5rem 0rem 5rem;
   font-size: 3rem;
   font-weight: 700;
   color: #33a8db;
 }
+
+/* -- FOOTER */
 
 footer {
   display: flex;
@@ -194,9 +226,9 @@ footer {
   align-items: center;
   text-align: center;
   justify-content: center;
-  margin-top: 100px;
-  height: 10px;
-  height: 170px;
+  margin-top: 6.25rem;
+  height: 0.625rem;
+  height: 10.625rem;
   background: linear-gradient(
     180deg,
     rgba(51, 168, 219, 0) 0%,
@@ -207,7 +239,7 @@ footer {
 }
 
 footer img {
-  padding: 20px 0px;
+  padding: 1.25rem 0rem;
 }
 
 footer p {
