--- a/assets/css/style.css/styles.css
+++ b/assets/css/style.css/styles.css
@@ -122,8 +122,6 @@ button:hover {
 
 @media only screen and (max-width: 600px) {
   .modules-list {
-    background-color: #1472b7;
-    display: flex;
     min-width: 100%;
   }
 }
@@ -145,7 +143,7 @@ button:hover {
   padding-left: 1rem;
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
   .module {
     background-color: #1472b7;
     display: flex;
@@ -172,10 +170,17 @@ button:hover {
   cursor: pointer;
 }
 
+@media only screen and (max-width: 768px) {
+  #transform-world {
+    display: flex;
+    min-width: 100%;
+  }
+}
+
 #transform-world {
   display: flex;
   background-position: right center;
-  background: url(/assets/imagens/woman-code.png);
+  background: url(/assets/imagens/woman-code.png) center;
   background-size: cover;
   border: solid 0.063rem #33a8db;
   background-attachment: fixed;
