--- a/assets/css/style.css/styles.css
+++ b/assets/css/style.css/styles.css
@@ -7,9 +7,7 @@ body {
   background-color: black;
 }
 
-/*
-  - Header
-*/
+/* -- HEADER -- */
 
 .banner {
   display: flex;
@@ -36,7 +34,7 @@ body {
     180deg,
     rgba(0, 0, 0, 0.6) 0%,
     rgba(49, 168, 221, 0) 100%
-  );
+  )
 }
 
 .logo img {
@@ -72,7 +70,7 @@ body {
   color: white;
   margin-bottom: 1.875rem;
   width: 100%;
-  margin: 1rem;
+  margin: 0rem 1rem 2rem;
 }
 
 .banner button {
@@ -93,9 +91,7 @@ button:hover {
   cursor: pointer;
 }
 
-/*
-  - MAIN
-*/
+/* -- MAIN-- */
 
 #course-content {
   display: flex;
@@ -115,11 +111,17 @@ button:hover {
   margin-bottom: 1.5rem;
 }
 
+@media only screen and (min-width: 768px) {
+  #course-content p,
+  #professional-challenges p {
+    max-width: 80rem;
+  }
+}
+
 #course-content p,
 #professional-challenges p {
   display: flex;
   justify-content: center;
-
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.188rem;
@@ -213,16 +215,29 @@ button:hover {
   flex-direction: column;
 }
 
+
+@media only screen and (min-width: 768px) {
+  #professional-challenges img {
+    max-width: 50%
+  }
+}
+
 #professional-challenges img {
-  width: 70%;
-  margin: 5rem 0rem;
+  width: 100%;
+  margin: 5rem 0rem 0rem;
+}
+
+@media only screen and (min-width: 768px) {
+  #professional-challenges h2 {
+    max-width: 40rem;
+  }
 }
 
 #professional-challenges h2 {
   text-align: center;
   width: 100%;
   height: 4.75rem;
-  margin: 5rem 0rem 5rem;
+  margin: 8rem 0rem 1rem;
   font-size: 3rem;
   font-weight: 700;
   color: #33a8db;
